tests/snapshots/golden_rust__rust_file_tree_single_oauth2_scheme.snap
---
source: tests/golden_rust.rs
expression: file_tree(&output_dir)
---
[
    ".dockerignore",
    ".env.example",
    ".githooks/pre-commit",
    ".github/FUNDING.yml",
    ".github/workflows/ci.yml",
    ".github/workflows/container-image.yml",
    ".github/workflows/docker-build.yml",
    ".github/workflows/release.yml",
    ".gitignore",
    ".mcpify/settings.yaml",
    "Cargo.toml",
    "Dockerfile",
    "LICENSE",
    "README.md",
    "dist-workspace.toml",
    "docker-compose.yml",
    "examples/profile_search.rs",
    "mcp_store.db.zst",
    "scripts/check_production_coverage.py",
    "scripts/coverage.sh",
    "scripts/profile-heap.sh",
    "scripts/profile.sh",
    "scripts/samply_to_text.py",
    "src/auth/auth_manager.rs",
    "src/auth/auth_strategy.rs",
    "src/auth/errors.rs",
    "src/auth/mod.rs",
    "src/auth/request_credentials.rs",
    "src/auth/strategies/mod.rs",
    "src/auth/strategies/oauth2.rs",
    "src/auth/strategies/stub.rs",
    "src/bin/healthcheck.rs",
    "src/bin/populate_embeddings.rs",
    "src/cli/call.rs",
    "src/cli/config.rs",
    "src/cli/get.rs",
    "src/cli/mod.rs",
    "src/cli/search.rs",
    "src/cli/setup.rs",
    "src/cli/setup_wizard.rs",
    "src/cli/test_connection.rs",
    "src/cli/version.rs",
    "src/cli/versions.rs",
    "src/core/api_url_builder.rs",
    "src/core/cache_manager.rs",
    "src/core/circuit_breaker.rs",
    "src/core/component_registry.rs",
    "src/core/config_manager.rs",
    "src/core/config_schema.rs",
    "src/core/correlation_context.rs",
    "src/core/credential_storage.rs",
    "src/core/errors.rs",
    "src/core/health_check_manager.rs",
    "src/core/log_transport.rs",
    "src/core/logger.rs",
    "src/core/mcp_server.rs",
    "src/core/mod.rs",
    "src/core/otel.rs",
    "src/core/rate_limiter.rs",
    "src/core/sanitizer.rs",
    "src/core/shutdown_handler.rs",
    "src/data/mod.rs",
    "src/data/store.rs",
    "src/http/auth_extractor.rs",
    "src/http/localhost_detector.rs",
    "src/http/metrics.rs",
    "src/http/mod.rs",
    "src/http/server.rs",
    "src/http/types.rs",
    "src/lib.rs",
    "src/main.rs",
    "src/services/api_client.rs",
    "src/services/embedding_service.rs",
    "src/services/mod.rs",
    "src/tools/call_tool.rs",
    "src/tools/get_tool.rs",
    "src/tools/mod.rs",
    "src/tools/search_tool.rs",
    "src/validation/generated_schemas.json.zst",
    "src/validation/mod.rs",
    "src/validation/validator.rs",
    "tests/cli_smoke.rs",
    "tests/embeddings_populated.rs",
    "tests/runtime_paths.rs",
    "tests/schema_references.rs",
]
